Fixing copy paste issue

--- a/start.html
+++ b/start.html
@@ -128,8 +128,8 @@ another fundamental object type, the <code>WebElement</code>.
     cheddar = cheese.find_elements_by_id("cheddar")
   </code>
   <code class=cs>
-    IWebElement element = driver.FindElement(By.Id("cheese"));
-    IWebElement element = driver.FindElement(By.Id("cheddar"));
+    IWebElement cheese = driver.FindElement(By.Id("cheese"));
+    IWebElement cheddar = cheese.FindElement(By.Id("cheddar"));
   </code>
   <code class=ruby>
     cheese = driver.find_element(id: "cheese")
