Documented frames with java example

--- a/wd.html
+++ b/wd.html
@@ -932,6 +932,83 @@ end</code>
 #WebDriver will automatically quit after indentation</code>
 </pre>
 
+<h2>Frames and Iframes</h2>
+<p>Frames are a now deprecated means of building a site layout from
+ multiple documents on the same domain.  You are unlikely to work with
+ them unless you are working with an pre HTML5 webapp.  Iframes allow
+ the insertion of a document from an entirely different domain, and are
+ still commonly used.</p>
+<p>If you need to work with frames or iframes, Webdriver allows you to
+ work with them in the same way.  Consider a button within an iframe.
+ If we inspect the element using the browser development tools, we might
+ see the following:</p>
+<pre><code class=html>&lt;div id="modal"&gt;
+  &lt;iframe id="buttonframe" name="myframe"  src="https://seleniumhq.github.io/docs/iframe.html"&gt;
+   &lt;button&gt;Click here&lt;/button&gt;
+ &lt;/iframe&gt;
+&lt;/div&gt;
+</code></pre>
+<p>If it wasn't for the iframe we would expect to click on the button
+ using something like:</p>
+<pre><code class=java>//This won't work
+driver.findElement(By.tagName("button")).click();
+</code></pre>
+<p>However, if there are no buttons outside of the iframe, you might
+    instead get a <em>no such element</em> error.  This happens because Selenium is
+ only aware of the elements in the top level document.  To interact with
+ the button, we will need to first switch to the frame, in a similar way
+ to how we switch windows.  Webdriver offers three ways of switching to
+ a frame.</p>
+
+<h3>Using a webelement</h3>
+<p>Switching using a webelement is the most flexible option.  You can
+ find the frame using your preferred selector and switch to it.</p>
+<pre>
+ <code class=java>//Store the web element
+WebElement iframe = driver.findElement(By.cssSelector("#modal>iframe"));
+
+//Switch to the frame
+driver.switchTo().frame(iframe);
+
+//Now we can click the button
+driver.findElement(By.tagName("button")).click();
+ </code>
+</pre>
+
+<h3>Using a name or ID</h3>
+<p>If your frame or iframe has a id or name attribute, this can be used
+ instead.  If the name or ID is not unique on the page, then the first
+ one found will be switched to.</p>
+
+<pre>
+ <code class=java>//Using the ID
+driver.switchTo().frame("buttonframe");
+
+//Or using the name instead
+driver.switchTo().frame("myframe");
+
+//Now we can click the button
+driver.findElement(By.tagName("button")).click();</code>
+</pre>
+
+<h3>Using an index</h3>
+<p>It is also possible to use the index of the frame, such as can be
+    queried using <em>window.frames</em> in javascript.</p>
+
+<pre>
+ <code class=java>//Switches to the second frame
+driver.switchTo().frame(1);</code>
+</pre>
+
+<h3>Leaving a frame</h3>
+<p>To leave an iframe or frameset, switch back to the default content
+ like so:
+</p>
+<pre>
+ <code class=java>//Return to the top level
+driver.switchTo().defaultContent();</code>
+</pre>
+
 <h2>Window Management</h2>
 <p>Screen resolution can impact how your web application renders, so
  WebDriver provides mechanisms for moving and resizing the browser
