--- a/wd.html
+++ b/wd.html
@@ -1531,6 +1531,20 @@ search_form = driver.find_element_by_tag_name("form")
 search_box = search_form.find_element_by_name("q")
 search_box.send_keys("webdriver")
   </code>
+  <code class=java>
+// Initialize WebDriver
+WebDriver driver = new FirefoxDriver();
+		
+// Launch the browser and navigate to the URL
+driver.get("http://www.google.com");
+        
+// Locate the webelement
+WebElement searchForm = driver.findElement(By.tagName("form"));
+WebElement searchbox = driver.findElement(By.name("q"));
+        
+// type on the searchbox
+searchbox.sendKeys("webdriver");
+  </code>
 </pre>
 
 <h2>Keyboard</h2>
