--- a/wd.html
+++ b/wd.html
@@ -281,6 +281,7 @@ driver = Selenium::WebDriver.for :chrome</code>
 <pre>
  <code class=java>System.setProperty("webdriver.chrome.driver", "/path/to/chromedriver");</code>
  <code class=python>Chrome(executable_path='/path/to/chromedriver')</code>
+ <code class=cs>new ChromeDriver("/path/to/chromedriver")</code>
  <code class=ruby>Selenium::WebDriver::Chrome.driver_path = "/path/to/chromedriver"</code>
 </pre>
 
@@ -336,6 +337,7 @@ driver = Selenium::WebDriver.for :firefox</code>
 <pre>
   <code class=java>System.setProperty("webdriver.gecko.driver", "/path/to/geckodriver");</code>
   <code class=python>Firefox(executable_path='/path/to/geckodriver')</code>
+  <code class=cs>new FirefoxDriver("/path/to/geckodriver");</code>
   <code class=ruby>Selenium::WebDriver::Firefox.driver_path = "/path/to/geckodriver"</code>
 </pre>
 
@@ -394,6 +396,7 @@ driver = Selenium::WebDriver.for :edge</code>
 <pre>
   <code class=java>System.setProperty("webdriver.edge.driver", "C:/path/to/MicrosoftWebDriver.exe");</code>
   <code class=python>Edge(executable_path='/path/to/MicrosoftWebDriver.exe')</code>
+  <code class=cs>new EdgeDriver("/path/to/geckodriver");</code>
   <code class=ruby>Selenium::WebDriver::Edge.driver_path = "C:\path\to\MicrosoftWebDriver.exe"</code>
 </pre>
 
@@ -438,6 +441,7 @@ driver = Selenium::WebDriver.for :internet_explorer</code>
 <pre>
   <code class=java>System.setProperty("webdriver.ie.driver", "C:/path/to/IEDriver.exe");</code>
   <code class=python>Ie(executable_path='/path/to/IEDriverServer.exe')</code>
+  <code class=cs>new InternetExplorerDriver("/path/to/geckodriver");</code>
   <code class=ruby>Selenium::WebDriver::IE.driver_path = "C:\path\to\IEDriver.exe"</code>
 </pre>
 
@@ -739,7 +743,7 @@ with webdriver.Firefox() as driver:
     # Wait for the new tab to finish loading content
     wait.until(EC.title_is("Selenium documentation"))</code>
  <code class=cs>//Store the ID of the original window
-String originalWindow = driver.CurrentWindowHandle;
+string originalWindow = driver.CurrentWindowHandle;
 
 //Check we don't have other windows open already
 Assert.AreEqual(driver.WindowHandles.Count, 1);
@@ -751,7 +755,7 @@ driver.FindElement(By.LinkText("new window")).Click();
 wait.Until(wd => wd.WindowHandles.Count == 2);
 
 //Loop through until we find a new window handle
-foreach(String window in driver.WindowHandles)
+foreach(string window in driver.WindowHandles)
 {
     if(originalWindow != window)
     {
@@ -950,9 +954,14 @@ end</code>
 </code></pre>
 <p>If it wasn't for the iframe we would expect to click on the button
  using something like:</p>
-<pre><code class=java>//This won't work
+<pre>
+  <code class=java>//This won't work
 driver.findElement(By.tagName("button")).click();
-</code></pre>
+  </code>
+  <code class=cs>//This won't work
+driver.FindElement(By.TagName("button")).Click();
+  </code>
+</pre>
 <p>However, if there are no buttons outside of the iframe, you might
     instead get a <em>no such element</em> error.  This happens because Selenium is
  only aware of the elements in the top level document.  To interact with
@@ -973,6 +982,15 @@ driver.switchTo().frame(iframe);
 //Now we can click the button
 driver.findElement(By.tagName("button")).click();
  </code>
+  <code class=cs>//Store the web element
+IWebElement iframe = driver.FindElement(By.CssSelector("#modal>iframe"));
+
+//Switch to the frame
+driver.SwitchTo().Frame(iframe);
+
+//Now we can click the button
+driver.FindElement(By.TagName("button")).Click();
+ </code>
 </pre>
 
 <h3>Using a name or ID</h3>
@@ -989,6 +1007,14 @@ driver.switchTo().frame("myframe");
 
 //Now we can click the button
 driver.findElement(By.tagName("button")).click();</code>
+ <code class=cs>//Using the ID
+driver.SwitchTo().Frame("buttonframe");
+
+//Or using the name instead
+driver.SwitchTo().Frame("myframe");
+
+//Now we can click the button
+driver.FindElement(By.TagName("button")).Click();</code>
 </pre>
 
 <h3>Using an index</h3>
@@ -998,6 +1024,8 @@ driver.findElement(By.tagName("button")).click();</code>
 <pre>
  <code class=java>//Switches to the second frame
 driver.switchTo().frame(1);</code>
+ <code class=cs>//Switches to the second frame
+driver.SwitchTo().Frame(1);</code>
 </pre>
 
 <h3>Leaving a frame</h3>
@@ -1007,6 +1035,8 @@ driver.switchTo().frame(1);</code>
 <pre>
  <code class=java>//Return to the top level
 driver.switchTo().defaultContent();</code>
+ <code class=cs>//Return to the top level
+driver.SwitchTo().DefaultContent();</code>
 </pre>
 
 <h2>Window Management</h2>
@@ -1033,13 +1063,22 @@ height = driver.get_window_size().get("height")
 size = driver.get_window_size()
 width1 = size.get("width")
 height1 = size.get("height")</code>
+ <code class=cs>//Access each dimension individually
+int width = driver.Manage().Window.Size.Width;
+int height = driver.Manage().Window.Size.Height;
+
+//Or store the dimensions and query them later
+System.Drawing.Size size = driver.Manage().Window.Size;
+int width1 = size.Width;
+int height1 = size.Height;</code>
 </pre>
 
 <h3>Set Window Size</h3>
 <p>Restores the window and sets the window size.
 <pre>
  <code class=java>driver.manage().window().setSize(new Dimension(1024, 768));</code>
- <code class=python>driver.set_window_size(1024,768)</code>
+ <code class=python>driver.set_window_size(1024, 768)</code>
+ <code class=cs>driver.Manage().Window.Size = new Size(1024, 768);</code>
 </pre>
 
 <h3>Get Window Position</h3>
@@ -1047,7 +1086,7 @@ height1 = size.get("height")</code>
 <pre>
  <code class=java>//Access each dimension individually
 int x = driver.manage().window().getPosition().getX();
-int y = driver.manage().window()..getPosition().getY();
+int y = driver.manage().window().getPosition().getY();
 
 //Or store the dimensions and query them later
 Point position = driver.manage().window().getPosition();
@@ -1061,15 +1100,25 @@ y = driver.get_window_position().get('y')
 position = driver.get_window_position()
 x1 = position.get('x')
 y1 = position.get('y')</code>
+ <code class=cs>//Access each dimension individually
+int x = driver.Manage().Window.Position.X;;
+int y = driver.Manage().Window.Position.Y;
+
+//Or store the dimensions and query them later
+Point position = driver.Manage().Window.Position;
+int x1 = position.X;
+int y1 = position.Y;</code>
 </pre>
 
 <h3>Set Window Position</h3>
 <p>Moves the window to the chosen position.
 <pre>
  <code class=java>//Move the window to the top left of the primary monitor
-driver.manage().window().setPosition(new Point(0,0));</code>
+driver.manage().window().setPosition(new Point(0, 0));</code>
  <code class=python>//Move the window to the top left of the primary monitor
 driver.set_window_position(0, 0)</code>
+ <code class=cs>//Move the window to the top left of the primary monitor
+driver.Manage().Window.Position = new Point(0, 0);</code>
 </pre>
 
 <h3>Maximise Window</h3>
@@ -1079,6 +1128,7 @@ driver.set_window_position(0, 0)</code>
 <pre>
  <code class=java>driver.manage().window().maximize();</code>
  <code class=python>driver.maximize_window()</code>
+ <code class=cs>driver.Manage().Window.Maximize();</code>
 </pre>
 
 <h3>Fullscreen Window</h3>
@@ -1086,6 +1136,7 @@ driver.set_window_position(0, 0)</code>
 <pre>
  <code class=java>driver.manage().window().fullscreen();</code>
  <code class=python>driver.fullscreen_window()</code>
+ <code class=java>driver.Manage().Window.FullScreen();</code>
 </pre>
 
 <h2>Waits</h2>
@@ -1131,6 +1182,11 @@ assert el.text == "Hello from JavaScript!"</code>
 driver.get("file:///race_condition.html");
 WebElement element = driver.findElement(By.tagName("p"));
 assertEquals(element.getText(), "Hello from JavaScript!");
+</code>
+<code class=cs>
+driver.Navigate().GoToUrl("file:///race_condition.html");
+IWebElement element = driver.FindElement(By.TagName("p"));
+assertEquals(element.Text, "Hello from JavaScript!");
 </code>
 </pre>
 
@@ -1421,6 +1477,19 @@ text = alert.text
 # Press the OK button
 alert.accept()
  </code>
+ <code class=cs>
+//Click the link to activate the alert
+driver.FindElement(By.LinkText("See an example alert")).Click();
+
+//Wait for the alert to be displayed and store it in a variable
+IAlert alert = wait.Until(ExpectedConditions.AlertIsPresent());
+
+//Store the alert text in a variable
+string text = alert.Text;
+
+//Press the OK button
+alert.Accept();
+ </code>
 </pre>
 
 <h3>Confirm</h3>
@@ -1464,6 +1533,22 @@ text = alert.text
 # Press the Cancel button
 alert.dismiss()
  </code>
+ <code class=cs>
+//Click the link to activate the alert
+driver.FindElement(By.LinkText("See a sample confirm")).Click();
+
+//Wait for the alert to be displayed
+wait.Until(ExpectedConditions.AlertIsPresent());
+
+//Store the alert in a variable
+IAlert alert = driver.SwitchTo().Alert();
+
+//Store the alert in a variable for reuse
+string text = alert.Text;
+
+//Press the Cancel button
+alert.Dismiss();
+ </code>
 </pre>
 
 <h3>Prompt</h3>
@@ -1504,6 +1589,19 @@ alert.send_keys("Selenium")
 
 # Press the OK button
 alert.accept()
+ </code>
+ <code class=cs>
+//Click the link to activate the alert
+driver.FindElement(By.LinkText("See a sample prompt")).Click();
+
+//Wait for the alert to be displayed and store it in a variable
+IAlert alert = wait.Until(ExpectedConditions.AlertIsPresent());
+
+//Type your message
+alert.SendKeys("Selenium");
+
+//Press the OK button
+alert.Accept();
  </code>
 </pre>
 
