--- a/intro.html
+++ b/intro.html
@@ -350,7 +350,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
 <code class=python># The exists() method from UnicornConfirmationPage will take the Sparkles
 # object--a specification of the attributes you want to see, and compare
 # them with the fields on the page.
-assert "Sparkles should have been created, with all attributes intact", unicorn_confirmation_page.exists(sparkles)</code></pre>
+assert unicorn_confirmation_page.exists(sparkles), "Sparkles should have been created, with all attributes intact"</code></pre>
 
 <p>Note that the tester still hasn't done anything but talk about unicorns in this code–
  no buttons, no locators, no browser controls.
