--- a/wd.html
+++ b/wd.html
@@ -1190,15 +1190,28 @@ assertEquals(element.getText(), "Hello from JavaScript!");
  wait until the dynamically added element from the script
  has been added to the DOM:
 
-<pre><code class=python>from selenium.webdriver.support.ui import WebDriverWait
-
+<pre>
+	<code class=java>
+WebDriver driver = new ChromeDriver();
+driver.get("https://google.com/ncr");
+driver.findElement(By.name("q")).sendKeys("cheese" + Keys.ENTER);
+// Initialize and wait till element(link) became clickable - timeout in 10 seconds 
+WebElement firstResult = new WebDriverWait(driver, 10)
+        .until(ExpectedConditions.elementToBeClickable(By.xpath("//a/h3")));
+// Print the first result
+System.out.println(firstResult.getText());      
+	</code>
+	<code class=python>
+from selenium.webdriver.support.ui import WebDriverWait
 def document_initialised(driver):
     return driver.execute_script("return initialised")
 
 driver.navigate("file:///race_condition.html")
 WebDriverWait(driver).until(document_initialised)
 el = driver.find_element_by_tag_name("p")
-assert el.text == "Hello from JavaScript!"</code></pre>
+assert el.text == "Hello from JavaScript!"
+  </code>
+</pre>
 
 <p>We pass in the <em>condition</em> as a function reference
  that the <em>wait</em> will run repeatedly until its return value is truthy.
