--- a/remote.html
+++ b/remote.html
@@ -122,11 +122,23 @@ public class AppServer {
  pointing to our remote web server, <em>www.example.com</em>,
  running our tests on Firefox.
 
-<pre><code class=ruby>require 'selenium-webdriver'
+<pre>
+<code class=java>
+WebDriver driver = null;		
+DesiredCapabilities capabilities = DesiredCapabilities.firefox();
+
+driver = new RemoteWebDriver(new URL("http://www.example.com"),capabilities);
+driver.get("http://www.google.com");
+driver.close();
+</code>
+<code class=ruby>
+require 'selenium-webdriver'
 
 driver = Selenium::WebDriver.for :remote, url: "http://www.example.com", desired_capabilities: :firefox
 driver.get "http://www.google.com"
-driver.close</code></pre>
+driver.close
+</code>
+</pre>
 
 <p>To further customize our test configuration, we can add other desired capabilities.
 
